updated links to game site

--- a/index_og.html
+++ b/index_og.html
@@ -7,7 +7,7 @@
         <!--  -->
         <!--    Document Title-->
         <!-- =============================================-->
-        <title>Perseverance Reimagined</title>
+        <title>Freya | Website, template crafting machine</title>
         <!--  -->
         <!--    Favicons-->
         <!--    =============================================-->
@@ -30,7 +30,7 @@
         <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
         <link href="assets/lib/hamburgers/dist/hamburgers.min.css" rel="stylesheet">
         <link href="assets/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-        <link href="assets/lib/jquery.mb.ytplayer/dist/css/jquery.mb.YTPlayer.min.css" rel="stylesheet">
+        <link href="assets/lib/flexslider/flexslider.css" rel="stylesheet">
         <!-- Main stylesheet and color file-->
         <link href="assets/css/style.css" rel="stylesheet">
         <link href="assets/css/custom.css" rel="stylesheet">
@@ -47,7 +47,7 @@
             <div class="znav-container znav-white znav-freya znav-fixed" id="znav-container">
                 <div class="container">
                     <nav class="navbar navbar-expand-lg"><a class="navbar-brand overflow-hidden pr-3" href="index.html">
-                            <div class="background-1 radius-br-0 radius-secondary lh-1 color-white fs-0" style="padding: 7px 10px 7px 13px;">ICARUS</div>
+                            <div class="background-1 radius-br-0 radius-secondary lh-1 color-white fs-0" style="padding: 7px 10px 7px 13px;">Freya</div>
                             <!-- Incase you are using image-->
                             <!-- <img src="assets/images/logo-freya.png" alt="Freya" width="70"/>-->
                         </a>
@@ -126,35 +126,100 @@
                     </nav>
                 </div>
             </div>
-            <section class="py-0 color-white">
-                <div class="background-holder" style="background-image:url(http://img.youtube.com/vi/ajKlIAVuBJc/maxresdefault.jpg);">
-                    <div class="youtube-background" data-property='{"videoURL":"https://www.youtube.com/watch?v=ajKlIAVuBJc","startAt":4,"stopAt":38,"mute":true,"showYTLogo":false}'></div>
-                </div>
-                <!--/.background-holder-->
-                <div class="container">
-                    <div class="row justify-content-start align-items-end pt-11 pb-6 h-full" data-zanim-timeline="{}" data-zanim-trigger="scroll">
-                        <div class="col pb-lg-0">
-                            <div class="row align-items-end">
-                                <div class="col-lg">
-                                    <div class="overflow-hidden">
-                                        <p class="mb-1 text-uppercase ls" data-zanim='{"from":{"opacity":0,"x":-30},"to":{"opacity":1,"x":0},"delay":0.1}'>Project ICARUS</p>
-                                    </div>
-                                    <div class="overflow-hidden">
-                                        <h2 class="color-white fw-500 mb-4 mb-lg-0" data-zanim='{"from":{"opacity":0,"x":-30},"to":{"opacity":1,"x":0},"delay":0}'>Perseverance Reimagined</h2>
-                                    </div>
-                                </div>
-                                <!-- <div class="col text-lg-right">
-                                    <div class="overflow-hidden">
-                                        <div data-zanim='{"from":{"opacity":0,"x":-30},"to":{"opacity":1,"x":0},"delay":0.2}'><a class="btn btn-sm btn-outline-white" href="#">More about Freya</a></div>
-                                    </div> -->
-                                </div>
+            <div class="flexslider flexslider-simple h-full loading parallax">
+                <ul class="slides">
+                    <li data-zanim-timeline="{}">
+                        <section class="py-0 color-white">
+                            <div class="background-holder overlay overlay-freya" style="background-image:url(assets/images/header_1.jpg);">
                             </div>
-                        </div>
-                    </div>
-                    <!--/.row-->
-                </div>
-                <!--/.container-->
-            </section>
+                            <!--/.background-holder-->
+                            <div class="container">
+                                <div class="row justify-content-start align-items-end pt-11 pb-6 h-full" data-zanim-timeline="{}">
+                                    <div class="col pb-lg-0">
+                                        <div class="row align-items-end parallax" data-rellax-speed="2">
+                                            <div class="col-lg">
+                                                <div class="overflow-hidden">
+                                                    <p class="mb-1 text-uppercase ls" data-zanim='{"from":{"opacity":0,"x":-30},"to":{"opacity":1,"x":0},"delay":0.1}'>AvePoint Richmond</p>
+                                                </div>
+                                                <div class="overflow-hidden">
+                                                    <h2 class="color-white fw-500 mb-4 mb-lg-0" data-zanim='{"from":{"opacity":0,"x":-30},"to":{"opacity":1,"x":0},"delay":0}'>More livable spaces</h2>
+                                                </div>
+                                            </div>
+                                            <div class="col text-lg-right">
+                                                <div class="overflow-hidden">
+                                                    <div data-zanim='{"from":{"opacity":0,"x":-30},"to":{"opacity":1,"x":0},"delay":0.2}'><a class="btn btn-sm btn-outline-white" href="#">View Case Study</a></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--/.row-->
+                            </div>
+                            <!--/.container-->
+                        </section>
+                    </li>
+                    <li data-zanim-timeline="{}">
+                        <section class="py-0 color-white">
+                            <div class="background-holder overlay overlay-freya" style="background-image:url(assets/images/header_2.jpg);">
+                            </div>
+                            <!--/.background-holder-->
+                            <div class="container">
+                                <div class="row justify-content-start align-items-end pt-11 pb-6 h-full" data-zanim-timeline="{}">
+                                    <div class="col pb-lg-0">
+                                        <div class="row align-items-end parallax" data-rellax-speed="2">
+                                            <div class="col-lg">
+                                                <div class="overflow-hidden">
+                                                    <p class="mb-1 text-uppercase ls" data-zanim='{"from":{"opacity":0,"x":-30},"to":{"opacity":1,"x":0},"delay":0.1}'>French Valley</p>
+                                                </div>
+                                                <div class="overflow-hidden">
+                                                    <h2 class="color-white fw-500 mb-4 mb-lg-0" data-zanim='{"from":{"opacity":0,"x":-30},"to":{"opacity":1,"x":0},"delay":0}'>Luxurious Apartment</h2>
+                                                </div>
+                                            </div>
+                                            <div class="col text-lg-right">
+                                                <div class="overflow-hidden">
+                                                    <div data-zanim='{"from":{"opacity":0,"x":-30},"to":{"opacity":1,"x":0},"delay":0.2}'><a class="btn btn-sm btn-outline-white" href="#">More about Freya</a></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--/.row-->
+                            </div>
+                            <!--/.container-->
+                        </section>
+                    </li>
+                    <li data-zanim-timeline="{}">
+                        <section class="py-0 color-white">
+                            <div class="background-holder overlay overlay-freya" style="background-image:url(assets/images/header_3.jpg);">
+                            </div>
+                            <!--/.background-holder-->
+                            <div class="container">
+                                <div class="row justify-content-start align-items-end pt-11 pb-6 h-full" data-zanim-timeline="{}">
+                                    <div class="col pb-lg-0">
+                                        <div class="row align-items-end parallax" data-rellax-speed="2">
+                                            <div class="col-lg">
+                                                <div class="overflow-hidden">
+                                                    <p class="mb-1 text-uppercase ls" data-zanim='{"from":{"opacity":0,"x":-30},"to":{"opacity":1,"x":0},"delay":0.1}'>Upper Chesterfield</p>
+                                                </div>
+                                                <div class="overflow-hidden">
+                                                    <h2 class="color-white fw-500 mb-4 mb-lg-0" data-zanim='{"from":{"opacity":0,"x":-30},"to":{"opacity":1,"x":0},"delay":0}'>Sorption Marking Studio</h2>
+                                                </div>
+                                            </div>
+                                            <div class="col text-lg-right">
+                                                <div class="overflow-hidden">
+                                                    <div data-zanim='{"from":{"opacity":0,"x":-30},"to":{"opacity":1,"x":0},"delay":0.2}'><a class="btn btn-sm btn-outline-white" href="#">More about Sorption</a></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--/.row-->
+                            </div>
+                            <!--/.container-->
+                        </section>
+                    </li>
+                </ul>
+            </div>
             <section class="text-center background-white">
                 <div class="container">
                     <div class="row justify-content-center">
@@ -166,27 +231,27 @@
                     <div class="row mt-6">
                         <div class="col-lg-4">
                             <div class="row align-items-center">
-                                <div class="col-md-6 col-lg-12"><img class="w-100" src="assets/images/orrery_header.jpg" alt="" /></div>
+                                <div class="col-md-6 col-lg-12"><img class="w-100" src="assets/images/img_1.jpg" alt="" /></div>
                                 <div class="col-md-6 col-lg-12 text-md-left text-lg-center">
-                                    <h5 class="ls text-uppercase mt-4 mb-3">Orrery</h5>
+                                    <h5 class="ls text-uppercase mt-4 mb-3">Residential</h5>
                                     <p class="text-justify">From Manitoba to Brooklyn, affordable, comfortable and livable houses for families of all shapes and sizes are covered by us. Cras justo odio, dapibus, egestas eget quam lorem ipsum.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 mt-4 mt-lg-0">
                             <div class="row align-items-center">
-                                <div class="col-md-6 col-lg-12"><img class="w-100" src="assets/images/tcm_header.jpg" alt="" /></div>
+                                <div class="col-md-6 col-lg-12"><img class="w-100" src="assets/images/img_2.jpg" alt="" /></div>
                                 <div class="col-md-6 col-lg-12 text-md-left text-lg-center">
-                                    <h5 class="ls text-uppercase mt-4 mb-3">Orbital Transfer</h5>
+                                    <h5 class="ls text-uppercase mt-4 mb-3">Commercial</h5>
                                     <p class="text-justify">We have also designing interiors for restaurants, bar or office spaces. Cras mattis consectetur purus sit amet fermentum. Cum sociis natoque penatibus et magnis dolor.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 mt-4 mt-lg-0">
                             <div class="row align-items-center">
-                                <div class="col-md-6 col-lg-12"><img class="w-100" src="assets/images/mars_header.jpg" alt="" /></div>
+                                <div class="col-md-6 col-lg-12"><img class="w-100" src="assets/images/img_3.jpg" alt="" /></div>
                                 <div class="col-md-6 col-lg-12 text-md-left text-lg-center">
-                                    <h5 class="ls text-uppercase mt-4 mb-3">Mars Exploration</h5>
+                                    <h5 class="ls text-uppercase mt-4 mb-3">Hospitality</h5>
                                     <p class="text-justify">You need your guests to have an unforgettable experience, Freya Inc. is ready to deliver. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus.</p>
                                 </div>
                             </div>
@@ -204,10 +269,10 @@
                     <div class="row" data-zanim-timeline="{}" data-zanim-trigger="scroll">
                         <div class="col">
                             <div class="overflow-hidden">
-                                <h1 class="fs-5 fs-sm-6 color-white mb-3" data-zanim='{"delay":0}'>3D Gallery</h1>
+                                <h1 class="fs-5 fs-sm-6 color-white mb-3" data-zanim='{"delay":0}'>Museo</h1>
                             </div>
                             <div class="overflow-hidden">
-                                <h4 class="ls fw-300 text-uppercase color-9 mb-0" data-zanim='{"delay":0.1}'>A gallery of Perseverance parts</h4>
+                                <h4 class="ls fw-300 text-uppercase color-9 mb-0" data-zanim='{"delay":0.1}'>Manitoba</h4>
                             </div>
                         </div>
                     </div>
@@ -379,7 +444,7 @@
         <script src="assets/lib/rellax/rellax.min.js"></script>
         <script src="assets/js/zanimation.js"></script>
         <script src="assets/js/inertia.js"></script>
-        <script src="assets/lib/jquery.mb.ytplayer/dist/jquery.mb.YTPlayer.min.js"></script>
+        <script src="assets/lib/flexslider/jquery.flexslider-min.js"></script>
         <script src="assets/js/core.js"></script>
         <script src="assets/js/main.js"></script>
     </body>
